# ChangeLog for dev-python/pylibmc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pylibmc/ChangeLog,v 1.13 2015/04/22 13:38:21 mgorny Exp $

*pylibmc-1.4.2 (22 Apr 2015)

  22 Apr 2015; Michał Górny <mgorny@gentoo.org> +pylibmc-1.4.2.ebuild:
  Version bump with minor ebuild cleanup. https://github.com/gentoo/gentoo-
  portage-rsync-mirror/pull/103 by jbergstroem.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> pylibmc-1.2.3.ebuild,
  pylibmc-1.3.0.ebuild:
  Drop old Python implementations

*pylibmc-1.4.1 (10 Dec 2014)

  10 Dec 2014; Patrick Lauer <patrick@gentoo.org> +pylibmc-1.4.1.ebuild:
  Bump, add py3 support, #532002

  04 Apr 2014; Dirkjan Ochtman <djc@gentoo.org> -pylibmc-1.2.2.ebuild:
  Remove old version.

*pylibmc-1.3.0 (04 Apr 2014)

  04 Apr 2014; Dirkjan Ochtman <djc@gentoo.org> +pylibmc-1.3.0.ebuild:
  Version bump pylibmc to 1.3.0.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pylibmc-1.2.3.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pylibmc-1.2.3.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  24 Jan 2013; Dirkjan Ochtman <djc@gentoo.org> pylibmc-1.2.3.ebuild:
  Port pylibmc to distutils-r1 (bug 451912).

*pylibmc-1.2.3 (08 May 2012)

  08 May 2012; Dirkjan Ochtman <djc@gentoo.org> +pylibmc-1.2.3.ebuild:
  Version bump to 1.2.3 (bug 414425).

  03 May 2012; Dirkjan Ochtman <djc@gentoo.org> -pylibmc-1.2.1.ebuild:
  Remove old version.

*pylibmc-1.2.2 (30 Oct 2011)

  30 Oct 2011; Dirkjan Ochtman <djc@gentoo.org> +pylibmc-1.2.2.ebuild:
  Version bump to 1.2.2 with fixes, bug 388559.

*pylibmc-1.2.1 (24 Oct 2011)

  24 Oct 2011; Dirkjan Ochtman <djc@gentoo.org> +pylibmc-1.2.1.ebuild,
  +metadata.xml:
  Initial version (from sunrise, bug 267143).