@@ -3,9 +3,9 @@ DESCRIPTION=Pipe Viewer: a tool for monitoring the progress of data through a pi
 EAPI=5
 HOMEPAGE=http://www.ivarch.com/programs/pv.shtml
 IUSE=debug nls linguas_de linguas_fr linguas_pl linguas_pt
-KEYWORDS=~alpha amd64 ~arm hppa ~mips ppc ~ppc64 ~sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 ~arm hppa ~mips ppc ~ppc64 sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc64-solaris ~x86-solaris
 LICENSE=Artistic-2
 SLOT=0
 SRC_URI=http://www.ivarch.com/programs/sources/pv-1.6.0.tar.bz2
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=8251c96893f89b7b8475d3931e507092
+_md5_=99da2d108722a1d1b3dbd7362ef60ce0
