@@ -2,8 +2,8 @@ DEFINED_PHASES=install
 DESCRIPTION=Utility to change the binutils version being used
 EAPI=4
 HOMEPAGE=http://www.gentoo.org/
-KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ~ppc ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ~ppc ppc64 ~s390 ~sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=sys-apps/gentoo-functions
 SLOT=0
-_md5_=9d891a5303e4ac710d68f0b2cc50316c
+_md5_=711b07a6627f61e3cb84ec1075bf807f
