@@ -10,13 +10,15 @@ EBUILD binutils-config-1.9-r4.ebuild 626 SHA256 4445f3282acda5b7c96146974adefc47
 EBUILD binutils-config-2-r1.ebuild 627 SHA256 06d97c5306e671ccf55fcad8eec8dcd20e1c6c3bb8e4646771d62af5f1e1754f SHA512 856c552643f31f3df0218442c0290f7cb090c5088e0796ad03e5e07f5bdf0f8d3233b1659556e5768909a557971e5e5ebc702ba4a39658c7a862c4d5336364e6 WHIRLPOOL e5af63fd41361217f60dcfa84a605616a7bb0037fb986f00f3f866dff19bfa3fb96365b10be4854b6a27d643ccb2d682910644df5941e7f4d88f341ae2e6ad3c
 EBUILD binutils-config-3-r3.ebuild 645 SHA256 f06ca4397099677760eca41ef1ea3fc4cc3f55d755ff1cd51d607e60bf850af9 SHA512 73a592d324d7d537c3d67ad7402f13fe2b165fc241db373dd982015ada8b92d0bf961dd01e705cd3e77f704811535053f7a360fa24437bf25f5305f3f9713702 WHIRLPOOL 75f57d9150498c247589500945f09b07f83d12e86e4f7c213f86ffa6c8af51b28c60e18ea85b51cc02fd9fa1c30bd969c366aba2d81c7690d2a09be0eac8d413
 EBUILD binutils-config-4-r1.ebuild 724 SHA256 5f8d5163cb8260cb6b584b65e5c939f72490da852aa9462ed958cdc80762068a SHA512 4caca999f4361cfa90300518ff2efe01fb612dbfd3f20375439b1a00fb322875bd5c8b3a7cb502bbce4073d2cd1a86006c128451d28e2f3b43bc9a48257c936e WHIRLPOOL f456307381c9151fe5ce0d079b901d656ea2b58529a84c9b0d9e270979725f5b4953e8218129d33c87986773ec4eb55d94711e330ec1f5cc956108c275a8b38c
-EBUILD binutils-config-4-r2.ebuild 716 SHA256 fa497113afefbcd5a5dc5afeedf635864cc399cf071b645078cddadf85d50877 SHA512 87290830e3f604e444fe1f90b199d6545cd828a7aec60b70e934c6eddcc35a84502616f4c194d6a244d9945a40b908e472c94ac88b921b9609c8a8d18913e510 WHIRLPOOL f9ee9d563620c78b21e1bde10bf80c3e6a9c60be20fe9844484c3c4d30fd208bd968d7a802c35e12a62c05d869c01e8f106bf49882029a7e14af48c1f7241ecc
-MISC ChangeLog 11733 SHA256 4dee1bd6a29dc40c83e0c8167c23e3deb21887595e256473fae2e5b57b7dc08b SHA512 ee24e86fe94241a021ea4711321b38f8b2f0bff9fd5938c87c3bbe0f35b9750062715d7e2fc184fcb3593482cbcb2e99af640ed6f4d5a6d5e75c436d88a8c1c0 WHIRLPOOL 783f57698a549b42efcea63c7d0beedcf8bda1c9d20a3fae42c2408d1898f6c9f74adf4d47132966457d1c7403edb88af7387c782e18889425da997429d723ae
+EBUILD binutils-config-4-r2.ebuild 718 SHA256 d2e1beabc098dfe511667c14a7ed83c7c3122cad74bacbbbf8c23f72c5bd5997 SHA512 9205d649ed3c0ba76a507b75e397921afe03a80dc783e7ecd8490fbd9cebf440e055a96e7bec0b65597218652523eaa8405824cd8cede8081eeed881439300a4 WHIRLPOOL a148d7c99f0056fb6d8a7efa33c8d45310b4f137fbfa352d7fa708ecb79d29fef56a359a233a7f44342c6f8546b690abe75cd038e892e3507ec616515aa08665
+MISC ChangeLog 11957 SHA256 f9c76c32306118eb541303cf203408bad01b6e3243c8887e28e0656fcc1463e8 SHA512 064948056fe402dc66012e59661f46fbe3f053cd476d515ccf7689236f5377dd884439f44e57abb3a0b154254d89d03753f83e894837f96d062a70f5d6c5a84d WHIRLPOOL f055628f77766351bf0f0e2cab36b1395921da28f42363c789d556ba84b649a2b6428ec71b96fc42b65bd7e7c425a0b0558ab19aefa11ea8893d812bbe939014
 MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU32MwACgkQVWmRsqeSphMUngCeN2P6GJHkt4BPezWbTvATA3fU
-sfUAn3x0IvZf1ZN2FyvqQWKWvsAAFS3s
-=iTxY
+iJwEAQEIAAYFAlU4ugcACgkQG9wOWsQutdaMuAP/QlAhG8CZAh7O/QalhBbeDjGz
+8jpWnqAspPiEwEsU2lhwve5qfUiNeMk7WxbdVMb60pKcjk6QGwTAzgBv2dI7+XX8
+l9VP4iUW761O9n1fuylBd/QoCfXEFrLLnQLFguQBHZBCTrpfmb0unHx+uqHseDmp
+tY68kGiPoms83tX9uPI=
+=Dqll
 -----END PGP SIGNATURE-----
