@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils-config
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-config/ChangeLog,v 1.71 2015/04/22 17:22:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils-config/ChangeLog,v 1.73 2015/04/23 09:25:13 zlogene Exp $
+
+  23 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> binutils-config-4-r2.ebuild:
+  sparc stable wrt bug #547330
+
+  23 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> binutils-config-4-r2.ebuild:
+  x86 stable wrt bug #547330
 
   22 Apr 2015; Jeroen Roovers <jer@gentoo.org> binutils-config-4-r2.ebuild:
   Stable for PPC64 (bug #547330).
